--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && node migrate.mjs",
     "start": "next start",
     "lint": "next lint",
     "generate-pg": "drizzle-kit generate:pg",
     "migrate-pg": "node migrate.mjs",
     "push-pg": "drizzle-kit push:pg",
+    "pull-pg": "drizzle-kit introspect:pg",
     "studio": "drizzle-kit studio",
-    "check": "next lint && tsc --noemit"
+    "check": "next lint && tsc --noemit",
+    "shadcn": "shadcn-ui"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.521.0",
+    "@aws-sdk/credential-providers": "^3.525.0",
     "@clerk/nextjs": "^4.29.7",
+    "@langchain/community": "^0.0.34",
+    "@langchain/openai": "^0.0.15",
+    "@langchain/pinecone": "^0.0.3",
     "@neondatabase/serverless": "^0.8.1",
     "@pinecone-database/pinecone": "^2.0.1",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -25,12 +31,15 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-pdf-viewer/core": "3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tanstack/react-query": "^5.24.1",
     "@xenova/transformers": "^2.15.1",
     "add": "^2.0.6",
     "ai": "^2.2.37",
     "aws-sdk": "^2.1566.0",
     "axios": "^1.6.7",
+    "chromadb": "^1.8.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
@@ -46,6 +55,7 @@
     "openai": "^4.28.0",
     "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "3.4.120",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
     "react": "^18",
@@ -53,6 +63,7 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-iframe": "^1.8.5",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.11",
     "react-scroll-to-bottom": "^4.2.0",
     "sonner": "^1.4.2",
@@ -74,7 +85,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "shadcn-ui": "^0.8.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@4.1.0"
 }
