--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "tailwindcss-animate": "^1.0.7",
     "use-immer": "^0.9.0",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
